fix: StandAlone 정상화 및 PhysicsScene 고정타임 받도록 변경
- DuplicateWorld때만 하는 로직들 Initailize에서 하도록 변경
- 고정타임으로 안받으니 튀는 현상 발생 (맨처음 시작때는 델타타임 길고, 그 이외에는 작아서 문제가 발생한 것으로 추정)

--- a/Mundi/Mundi.vcxproj
+++ b/Mundi/Mundi.vcxproj
@@ -82,13 +82,13 @@
     <IntDir>$(SolutionDir)Intermediate\$(ProjectName)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IntDir>$(SolutionDir)Intermediate\$(ProjectName)\$(Configuration)\</IntDir>
     <LibraryPath>$(LibraryPath)</LibraryPath>
+    <IntDir>$(SolutionDir)Intermediate\$(ProjectName)\$(Configuration)\</IntDir>
     <OutDir>$(SolutionDir)Binaries\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_StandAlone|x64'">
-    <IntDir>$(SolutionDir)Intermediate\$(ProjectName)\$(Configuration)\</IntDir>
     <LibraryPath>$(LibraryPath)</LibraryPath>
+    <IntDir>$(SolutionDir)Intermediate\$(ProjectName)\$(Configuration)\</IntDir>
     <OutDir>$(SolutionDir)Binaries\$(Configuration)\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -123,9 +123,7 @@ xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\$(Configuration)\PhysXCommon_64.d
 xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\$(Configuration)\PhysXCooking_64.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\$(Configuration)\PhysXDevice64.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\$(Configuration)\PhysXFoundation_64.dll" "$(OutDir)"
-
-xcopy /y /d "$(ProjectDir)ThirdParty\lib\NvCloth\x64\$(Configuration)\*.dll" "$(OutDir)"
-xcopy /y /d "$(ProjectDir)ThirdParty\lib\NvCloth\x64\$(Configuration)\*.pdb" "$(OutDir)"</Command>
+xcopy /y /d "$(ProjectDir)ThirdParty\lib\NvCloth\x64\$(Configuration)\*.dll" "$(OutDir)"</Command>
       <Message>[PostBuild] Copying dependencies and publishing symbols...</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -161,7 +159,8 @@ xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\Debug\PhysX_64.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\Debug\PhysXCommon_64.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\Debug\PhysXCooking_64.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\Debug\PhysXDevice64.dll" "$(OutDir)"
-xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\Debug\PhysXFoundation_64.dll" "$(OutDir)"</Command>
+xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\Debug\PhysXFoundation_64.dll" "$(OutDir)"
+xcopy /y /d "$(ProjectDir)ThirdParty\lib\NvCloth\x64\Debug\*.dll" "$(OutDir)"</Command>
       <Message>[PostBuild] Copying dependencies and publishing symbols...</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -185,7 +184,7 @@ xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\Debug\PhysXFoundation_64.dll" "$(
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories);ThirdParty\lib\Lua\;ThirdParty\lib\DirectXTex\$(Configuration)\;ThirdParty\lib\FBXSDK\$(Configuration)\;ThirdParty\lib\DirectXTK\$(Configuration)\;ThirdParty\lib\Physx\$(Configuration)\;ThirdParty\lib\NvCloth\x64\Release\</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories);ThirdParty\lib\Lua\;ThirdParty\lib\DirectXTex\$(Configuration)\;ThirdParty\lib\FBXSDK\$(Configuration)\;ThirdParty\lib\DirectXTK\$(Configuration)\;ThirdParty\lib\Physx\$(Configuration)\;ThirdParty\lib\NvCloth\x64\$(Configuration)\</AdditionalLibraryDirectories>
         <AdditionalDependencies>DirectXTK.lib;DirectXTex.lib;%(AdditionalDependencies);lua54.lib;libfbxsdk.lib;alembic.lib;libxml2.lib;zlib.lib;PhysX_64.lib;PhysXCommon_64.lib;PhysXExtensions_static_64.lib;PhysXFoundation_64.lib;PhysXCooking_64.lib;PhysXVehicle_static_64.lib;PhysXPvdSDK_static_64.lib;NvCloth_x64.lib</AdditionalDependencies>
       <AdditionalOptions>/IGNORE:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
@@ -202,9 +201,7 @@ xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\$(Configuration)\PhysXCommon_64.d
 xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\$(Configuration)\PhysXCooking_64.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\$(Configuration)\PhysXDevice64.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\$(Configuration)\PhysXFoundation_64.dll" "$(OutDir)"
-
-xcopy /y /d "$(ProjectDir)ThirdParty\lib\NvCloth\x64\$(Configuration)\*.dll" "$(OutDir)"
-xcopy /y /d "$(ProjectDir)ThirdParty\lib\NvCloth\x64\$(Configuration)\*.pdb" "$(OutDir)"</Command>
+xcopy /y /d "$(ProjectDir)ThirdParty\lib\NvCloth\x64\$(Configuration)\*.dll" "$(OutDir)"</Command>
       <Message>[PostBuild] Copying dependencies and publishing symbols...</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -244,7 +241,8 @@ xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\Release\PhysX_64.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\Release\PhysXCommon_64.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\Release\PhysXCooking_64.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\Release\PhysXDevice64.dll" "$(OutDir)"
-xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\Release\PhysXFoundation_64.dll" "$(OutDir)"</Command>
+xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\Release\PhysXFoundation_64.dll" "$(OutDir)"
+xcopy /y /d "$(ProjectDir)ThirdParty\lib\NvCloth\x64\Release\*.dll" "$(OutDir)"</Command>
       <Message>[PostBuild] Copying dependencies and publishing symbols...</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
