--- a/Mundi/Mundi.vcxproj
+++ b/Mundi/Mundi.vcxproj
@@ -325,7 +325,7 @@ xcopy /y /d "$(ProjectDir)ThirdParty\lib\NvCloth\x64\Release\*.dll" "$(OutDir)"<
     <Content Include="Data\Scripts\TileMap.lua" />
     <Content Include="Data\Scripts\UIManager.lua" />
     <Content Include="Data\Scripts\w14_GameMain.lua" />
-    <Content Include="Data\Scripts\w14_MapPool.lua" />
+    <Content Include="Data\Scripts\w14_MapManager.lua" />
     <Content Include="Data\Scripts\w14_Math.lua" />
     <Content Include="Data\Scripts\w14_ObjectPool.lua" />
     <Content Include="Data\Scripts\w14_Queue.lua" />
