--- a/Mundi/Mundi.vcxproj
+++ b/Mundi/Mundi.vcxproj
@@ -326,8 +326,10 @@ xcopy /y /d "$(ProjectDir)ThirdParty\lib\NvCloth\x64\Release\*.dll" "$(OutDir)"<
     <Content Include="Data\Scripts\UIManager.lua" />
     <Content Include="Data\Scripts\w14_GameMain.lua" />
     <Content Include="Data\Scripts\w14_ItemManager.lua" />
+    <Content Include="Data\Scripts\w14_MapConfig.lua" />
     <Content Include="Data\Scripts\w14_MapManager.lua" />
     <Content Include="Data\Scripts\w14_Math.lua" />
+    <Content Include="Data\Scripts\w14_ObjectPlacer.lua" />
     <Content Include="Data\Scripts\w14_ObjectPool.lua" />
     <Content Include="Data\Scripts\w14_ObstacleManager.lua" />
     <Content Include="Data\Scripts\w14_Queue.lua" />
